Revert to template